--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "author": "my-demo",
   "license": "MIT",
   "dependencies": {
-    "lit-html": "^1.3.0",
-    "lit-element": "^2.4.0"
+    "hygen": "^6.0.4",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0"
   },
   "eslintConfig": {
     "extends": [
