add the scripts to bundle the components in a UMD bundle

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.html . --ignore-path .gitignore && prettier \"**/*.js\" --check --ignore-path .gitignore",
     "format": "eslint --ext .js,.html . --fix --ignore-path .gitignore && prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "build": "rimraf dist && rollup -c rollup.config.js",
+    "build": "rimraf dist && rollup -c rollup.config.js && rollup -c rollup.bundle.config.js && rollup -c rollup.bundle.demo.config.js",
     "start:build": "npm run build && web-dev-server --root-dir dist --app-index index.html --open --compatibility none",
     "start": "web-dev-server"
   },
@@ -25,6 +25,8 @@
   "author": "my-demo",
   "license": "MIT",
   "dependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "hygen": "^6.0.4",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0"
