--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "author": "my-demo",
   "license": "MIT",
   "dependencies": {
+    "@jack-henry/web-component-router": "^1.0.2",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "hygen": "^6.0.4",
     "lit-element": "^2.4.0",
